started to create SimplePerceptionField

--- a/ImageEnv_PLYGRD.ipynb
+++ b/ImageEnv_PLYGRD.ipynb
@@ -2,17 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "import gym\n",
-    "import imageEnv"
+    "import imageEnv\n",
+    "import numpy as np\n",
+    "from imageEnv.perceptionFields import SimplePerceptionField\n",
+    "import cv2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,10 +24,116 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<imageEnv.perceptionFields.simplePerceptionField.SimplePerceptionField at 0x112c423c8>]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env.perceptionFields"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pf = SimplePerceptionField(id=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "update\n",
+      "pos: [0. 0.] , vel: [0. 0.] , acc: [0. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "pf.update()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.01, 1.01])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pf.acc = np.add(pf.acc, 1.01)\n",
+    "pf.acc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "update\n",
+      "pos: [0. 0.] , vel: [1.01 1.01] , acc: [0. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "pf.update()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  0.,   0., 100., 100.])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pf.boundingBox"
+   ]
   },
   {
    "cell_type": "code",
