--- a/ImageEnv_PLYGRD.ipynb
+++ b/ImageEnv_PLYGRD.ipynb
@@ -2,52 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "import gym\n",
+    "import pickle\n",
     "import imageEnv\n",
     "import numpy as np\n",
+    "import torch\n",
     "from imageEnv.perceptionFields import SimplePerceptionField\n",
-    "import cv2"
+    "import cv2\n",
+    "import torchvision.datasets as dset\n",
+    "import torchvision.transforms as transforms\n",
+    "import pycocotools\n",
+    "import pickle\n",
+    "from PIL import Image\n",
+    "\n",
+    "\n",
+    "from IPython.display import clear_output, display\n",
+    "import matplotlib.pyplot as plt"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "env = gym.make('ImageEnv-v0')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<imageEnv.perceptionFields.simplePerceptionField.SimplePerceptionField at 0x112c423c8>]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "env.perceptionFields"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -55,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pf = SimplePerceptionField(id=1)"
+    "env = gym.make('ImageEnv-v0')"
    ]
   },
   {
@@ -67,72 +42,96 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "update\n",
-      "pos: [0. 0.] , vel: [0. 0.] , acc: [0. 0.]\n"
+      "loading annotations into memory...\n",
+      "Done (t=0.63s)\n",
+      "creating index...\n",
+      "index created!\n"
      ]
     }
    ],
    "source": [
-    "pf.update()"
+    "cap = dset.CocoDetection(root = 'data/coco/val2017',\n",
+    "                        annFile = 'data/coco/annotations/instances_val2017.json',\n",
+    "                        transform=transforms.ToTensor())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1.01, 1.01])"
+       "'preparing image 4999'"
       ]
      },
-     "execution_count": 12,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "pf.acc = np.add(pf.acc, 1.01)\n",
-    "pf.acc"
+    "images = []\n",
+    "masks = []\n",
+    "\n",
+    "for idx, el in enumerate(cap):\n",
+    "    clear_output(wait=True)\n",
+    "    display(\"preparing image {}\".format(idx))\n",
+    "    image, target = el\n",
+    "    categoryMask = np.zeros_like(image[0])\n",
+    "    hasCategory = False\n",
+    "    for instance in target:\n",
+    "        if instance['category_id'] == 1:\n",
+    "            hasCategory = True\n",
+    "            mask = cap.coco.annToMask(instance)\n",
+    "            categoryMask += mask\n",
+    "            \n",
+    "    if hasCategory == True:\n",
+    "        categoryMask = np.clip(categoryMask,0.0,1.0)\n",
+    "        images.append(image.permute(1, 2, 0).numpy())\n",
+    "        masks.append(categoryMask)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "update\n",
-      "pos: [0. 0.] , vel: [1.01 1.01] , acc: [0. 0.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pf.update()"
+    "for i, image in enumerate(images):\n",
+    "    targetImage = (image * 255).astype(np.uint8)\n",
+    "    out = Image.fromarray(targetImage)\n",
+    "    out.save(\"data/input/images/\"+str(i)+\".jpg\")\n",
+    "    \n",
+    "for i, mask in enumerate(masks):\n",
+    "    targetMask = (mask * 255).astype(np.uint8)\n",
+    "    out = Image.fromarray(targetMask)\n",
+    "    out.save(\"data/input/masks/\"+str(i)+\".jpg\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([  0.,   0., 100., 100.])"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "pf.boundingBox"
+    "img = cv2.imread(\"data/input/masks/2.jpg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv2.imshow(\"img\",img)"
    ]
   },
   {
