continued on simplePerceptionField

--- a/ImageEnv_PLYGRD.ipynb
+++ b/ImageEnv_PLYGRD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,6 +132,26 @@
    "outputs": [],
    "source": [
     "cv2.imshow(\"img\",img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2.88816086, 3.6932766 ])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.rand(2)*4"
    ]
   },
   {
